Login added! Worlds page added!

--- a/package.json
+++ b/package.json
@@ -14,11 +14,14 @@
     "express": "~3.2.5",
     "redis": "~0.8.3",
     "livedb-mongo": "~0.2.0",
+    "mongoskin": "0.6.x",
     "racer-browserchannel": "~0.1.0",
     "connect-mongo": "~0.3.2",
     "derby-ui-boot": "0.1.x",
     "coffeeify": "~0.4.0",
-    "coffee-script": "~1.6.2"
+    "coffee-script": "~1.6.2",
+    "derby-auth": "git+http://github.com/lefnire/derby-auth.git#0.5",
+    "passport-facebook": "1.0.x"
   },
   "engines": {
     "node": "0.10.x"
